fix alignment on front page

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -40,5 +40,11 @@
 .phase-banner {
   @include phase-banner();
 }
+.column-whole {
+  @include grid-column(1);
+}
+.column-third {
+  @include grid-column( 1/3 );
+}
 
 
